--- a/Portfolio/portfolio/package.json
+++ b/Portfolio/portfolio/package.json
@@ -17,10 +17,12 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
