--- a/Portfolio/portfolio/package.json
+++ b/Portfolio/portfolio/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
-    "next": "13.0.7",
+    "next": "^13.0.7",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.8.0",
     "react": "18.2.0",
