--- a/daygrade/package.json
+++ b/daygrade/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.5",
+    "@mui/material": "^5.11.7",
+    "@mui/x-date-pickers": "^5.0.16",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.2.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
     "react": "^18.2.0",
