--- a/daygrade/package.json
+++ b/daygrade/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
