--- a/daygrade/package.json
+++ b/daygrade/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "algoliasearch": "^4.14.3",
     "chart.js": "^4.2.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^2.29.3",
@@ -28,6 +29,7 @@
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
+    "react-instantsearch-dom": "^6.39.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
