--- a/daygrade/package.json
+++ b/daygrade/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "react-switch": "^7.0.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
