fixed responsiveness of the previous agendas page

--- a/daygrade/.vscode/settings.json
+++ b/daygrade/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["accum", "Checkin", "Todos"]
+  "cSpell.words": ["accum", "Checkin", "Todos"],
+  "git.ignoreLimitWarning": true
 }
