--- a/daygrade/package.json
+++ b/daygrade/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "firebase": "^9.16.0",
+    "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
